--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@sentry/nextjs": "^8.0.0",
     "@tanstack/react-query": "^5.35.5",
     "@tanstack/react-query-devtools": "^5.35.5",
     "axios": "^1.6.8",
